Remove Eclipse Dependencies and correct tests